# neo

./: BUILD.bazel  early-init.el  init.el  neo-app-dashboard.org  neo-init.org  neo.org
ansible/roles/emacs/tasks/: build-emacs.yaml
ansible/roles/emacs/vars/: main.yaml
morpheus/: init.el
morpheus/lisp/: neo-completions.el  neo-packages.el  neo-prog-c++.el  neo-prog-elisp.el  neo-prog-general.el  neo-server.el
scripts/: emacs
